--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -13,19 +13,40 @@ language: English
 verticals: Water, Smart Cities, Environmental
 ---
 
-# Detecting water leakages with Powel
+# Using Azure IoT to detecting water leakages with Powel
+
+## Introduction
+
+### IoT technologies in use 
+
+- SCADA sensors for data collection
+- IoT Hub for data ingestion
+- Stream Analytics 
+- Table Storage
+- PowerBI 
+- Azure Machine Learning
+- Document DB
+
+### Hackfest members
+
  
 ## Customer Profile
 
-Powel spans Europe with a broad and sustainable customer base and a long history as trusted supplier of software solutions for cities / municipalities, counties, the energy industry, as well as the contracting sector. Ca USD 50M revenue and 400 employees. The company has offices across Norway as well as in Sweden, Denmark, Switzerland, Chile, Turkey and Poland. 
+Powel spans Europe with a broad and sustainable customer base and a long history as trusted supplier of software solutions for 
+cities / municipalities, counties, the energy industry, as well as the contracting sector. 
+Ca USD 50M revenue and 400 employees. The company has offices across Norway as well as in 
+Sweden, Denmark, Switzerland, Chile, Turkey and Poland. 
  
-## Pain point
+## Problem Statement
 
 Water leakages in public water distribution systems are a waste of resources and should be detected and repaired as early as possible.
 
 For Norway as an average one estimates that as much as 32% of the water supply gets wasted due to leakages. One major challenge with the water distribution system is the age of the various components in the infrastructure.
 
 This report will summarize learnings from a one week engagement with Powel, where we explored using data from existing SCADA (Supervisory control and data acquisition) systems with Azure Machine Learning models, to create an application to detect leakages as early as possible.
+
+
+## DataWeek preparation
 
  
 ## Solution 
@@ -99,6 +120,10 @@ The next step for the customer is to finish up the last pieces of the demo appli
 
 ## Conclusion 
 
-We were able to create reasonably good machine learning models to predict future water flow values based on simple inputs like date and time. We were also able to create good visualization of historical data to highlight the anomalies. This made the job of correlating the anomalies found with the manual reports for issues and repairs for the water distribution system. We also created an end to end demo application for monitoring and alerting potential water leakages. This provided us with enough confidence needed to take this to the next phase.
+We were able to create reasonably good machine learning models to predict future water flow values based on simple inputs like date and time. 
+We were also able to create good visualization of historical data to highlight the anomalies. 
+This made the job of correlating the anomalies found with the manual reports for issues and repairs for the water distribution system. 
+We also created an end to end demo application for monitoring and alerting potential water leakages. 
+This provided us with enough confidence needed to take this to the next phase.
 
 
