Initial IOT Submission
Images are not adjusted to the template yet

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Detecting Water Leakages with Powel"
 author: "Pedro Dias"
 author-link: "#"
-#author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
+#author-image: "../images/powel/pedrodias.jpg"
 date:   2016-05-19
 categories: IoT
 color: "blue"
@@ -13,23 +13,43 @@ language: English
 verticals: Water, Smart Cities, Environmental
 ---
 
-# Using Azure IoT to detecting water leakages with Powel
-
+# Using IoT to detect water leakages with Powel 
 ## Introduction
+Municipalities in Norway currently have an average of over 30% water leakage in their water distribution network. This represents a significant cost that ultimately ends up in the hands of the consumers. 
+During a week long hackfest together with Microsoft, Powel implemented an IoT solution, ***Smart Water***, that will enhance the maintenance staff with the ability to discover and react to these leakages early. 
+This has the potential for huge savings for the municipalities and ultimately the consumers in them.
 
-### IoT technologies in use 
+This document describes the technlogoy choices made, and the learnings made from the hackfest.
 
-- SCADA sensors for data collection
-- IoT Hub for data ingestion
-- Stream Analytics 
-- Table Storage
-- PowerBI 
-- Azure Machine Learning
-- Document DB
+*Powel SmartWater Operations Dashboard*
+![Powel SmartWater operations dashboard](../images/powel/frontpage.png)
+
+
+### IoT Technologies used
+To achieve this, the following technologies were used: 
+
+- Telemetry provided by SCADA sensors (*Supervisory control and data acquisition*), measuring water flow and pressure
+- Azure Functions
+- Cortana Intelligence suite
+  - IoT Hub for massive-scale ingestion of sensor telemetry
+  - Azure Table Storage for storing the telemetry
+  - Azure DocumentDb for storing correlated data
+  - Azure Machine Learning for doing anomaly detection
+- Microsoft PowerBI for visualizing and understanding the data
+
 
 ### Hackfest members
 
+The roles that took part in the hackfest were: 
+
+| Company   | Role                         |
+| -------   | ----                         |
+| Powel     | Project lead                 | 
+|           | Domain expert, water         | 
+| BEKK      | ML, IoT Ingestion            |
+| Microsoft | Two technical evangelists    | 
  
+
 ## Customer Profile
 
 Powel spans Europe with a broad and sustainable customer base and a long history as trusted supplier of software solutions for 
@@ -37,31 +57,51 @@ cities / municipalities, counties, the energy industry, as well as the contracti
 Ca USD 50M revenue and 400 employees. The company has offices across Norway as well as in 
 Sweden, Denmark, Switzerland, Chile, Turkey and Poland. 
  
+
 ## Problem Statement
 
 Water leakages in public water distribution systems are a waste of resources and should be detected and repaired as early as possible.
+For Norway as an average one estimates that as much as 32% of the water supply gets wasted due to leakages. 
+One major challenge with the water distribution system is the age of the various components in the infrastructure. 
+Another challenge is that water pressure today is set to a constant high level, so pipes that are leaking will leak *more* water than necessary. 
+The reason why it is set higher is in case of a fire, where firefighters need that extra pressure for their water hoses.
 
-For Norway as an average one estimates that as much as 32% of the water supply gets wasted due to leakages. One major challenge with the water distribution system is the age of the various components in the infrastructure.
+Powel started this journey with the ambition of using the Cortana Intelligence Suite to deliver a product that could help municipalities detect these issues, and engaged with Microsoft
+to deliver a working *Minimal Viable Product* (MVP). 
 
-This report will summarize learnings from a one week engagement with Powel, where we explored using data from existing SCADA (Supervisory control and data acquisition) systems with Azure Machine Learning models, to create an application to detect leakages as early as possible.
+The challenges in the project were: 
 
-
-## DataWeek preparation
+- Finding a secure, scaleable way to deliver and store telemetry data
+- Understanding how to work and prepare the telemetry data for machine learning (ML)
+- Configure Azure ML to do anomaly detection on the data
+- Connect the anomaly detection results to the ***Smart Water*** application
 
  
 ## Solution 
 
-The solution will monitor current water flow into a water distibution system and in real-time detect anomalies in the flow compared to a machine learning based prediction of expected water flow. The users of the system will be alerted and provided with insights to take the approperiate actions to stop the leakage as early as possible.
+The ***Smart Water*** solution monitors current water flow into a water distibution system and, in near-real-time, detect anomalies compared to a ML based prediction. 
+The operators will then see alerts in their application, together with enough insight to take the approperiate actions. 
+The goal, of course, is stopping the leakage as early as possible.
+When more sensors and smart water meters are installed, the solution will have a potential to provide even more intelligence. 
 
-When more sensors and smart water meters are installed, the solution will have a potential to provide a lot more intelligence. 
+> A key part of the solution is the use of Azure Machine Learning. 
+> Without this, we would have nothing!
 
-A key part of the solution is the use of machine learning.
+*Smart Water Solution design - overview*
+![Smart Water Solution design overview](../images/powel/solution-design.png)
+
 
 ### Data available for analysis 
 
 For this project, we had the following data available:
--	Sensor data for water flow into a few of the water distribution zones in Trondheim municipality. The sensor data had a variety in frequency and time span. The goal was to have a complete data set for the three previous years (2013 – 2015), but due to issues with sensor availability there were some gaps in the data. 
+-	Sensor data for water flow into a few of the water distribution zones in Trondheim municipality. The sensor data had a variety in frequency and time span. 
+-   The goal was to have a complete data set for the three previous years (2013 – 2015), but due to issues with sensor availability there were some gaps in the data. 
 -	Reports written by the municipality on various incidents / repairs done related to the water distribution system.
+
+*SCADA Sensor*
+
+![SCADA Sensor](../images/powel/scada-sensor.jpg)
+
 
 ### Hypothesis 
 
@@ -69,61 +109,139 @@ If we could accurately predict the “normal” water flow into a given zone for
 
 ### Process 
 
-To be successful with data analysis and working with Machine Learning models we need to understand the whole process from the raw data until we have a reasonably good model, that is ready to be used by the application. The process we used is illustrated below. It’s important to understand that the process is not strictly sequential and that one may need to go back and iterate several times before a good model is achieved.
+To be successful with data analysis and working with Machine Learning models we needed to understand the whole process from the raw data until we had a reasonably good model 
+that was ready to be used by the application. 
+The process we used is illustrated below. 
 
-![Process](./images/process.png)
+![Process](../images/powel/process.png)
+
+
+### Telemetry Transmission
+
+We were able to obtain 3 years of telemetry from a friendly municipality and in order to create a realistic data stream, 
+we wrote a simulator application that replaced the timestamp of that dataset with the current time, and before sending the data to the [Azure IoT Hub](https://azure.microsoft.com/en-us/services/iot-hub/). 
+#### Device Simulator
+The simulator was written in an [Azure Function](https://azure.microsoft.com/en-us/services/functions/), which limited the transmit frequency to 1 minute. 
+The Scada sensors are able to transmit telemetry in 15 second intervals, but will require gateway software to connect to IoT Hub. We do not see any 
+major problems in creating such a gateway. 
+
+#### Security
+The IoT Hub allows only registered devices to communicate with it and each registered device gets its own, "personal" connection string. 
+In terms of security, this means that a compromised device's connection string cannot be used to impersonate other devices. 
+Additionally, device management in the Azure portal allow devices to be "disconnected" or "muted" in order to stop a faulty device from transmitting data that are 
+inconsistent or damaged in any form, which helps prevent mis-readings. Protecting this kind of data is vital to the success of the project, and we found that the 
+IoT Hub provided more than adequate solution to our concerns.
+
+#### Storing Telemetry using Stream Analytics job
+For all that can be said about the [Azure Stream Analytics](https://azure.microsoft.com/en-us/services/stream-analytics/) service (SA), it was one of the esiest things to deal with during the hackfest. 
+Since we already had set up the IoT Hub stream, as well as created a storage account in Azure Storage, we only needed to join the two using the following statement inbetween:
+
+```sql
+SELECT * INTO [SmartWaterSimulatorOutput] FROM [SmartWaterSimulatorInput]
+
+SELECT * INTO [ScadaQueue] FROM [SmartWaterSimulatorInput]
+```
+
+As you can see, there are **two** statements in here, one takes the data from the IoT Hub stream and stores it directly into Table Storage, and the second takes the same telemetry, 
+but outputs it to a [Service Bus Queue](https://docs.microsoft.com/en-us/azure/service-bus/). The idea here, is that the service bus gives the application a near-real-time telemetry
+feed of actual values, while the table storage is used by the Machine Learning experiment to do anomaly detection. The **Alert Service** subscribes to the Queue to visualize current values.
 
 ### Pre-processing of data files 
 
-We got several data files that were exported from the SCADA system in Excel format for each sensor measuring water flow. Each file contained some Excel tabs with data for different date ranges. Some of the sensor values was representing water flow into a zone and others water flow out of the zone. The files contained sensor data with various frequencies and some files contained sensor data, which was only reported if the values changed from previous value.
+The files that were exported from the SCADA system were in Excel format, each representing the water flow for a single sensor. 
+Each file contained some Excel tabs with data for different date ranges. Some of the sensor values represented water flowing into a zone and others water flowing out. 
+The files also had differences in update intervals, and some even contained sensor data that only reported changes to a previous state, with no predictable frequency at all.
 
-To simplify the processing of the data later in the process, we created a C# program to pre-process the data by doing the following:
+To simplify the processing of this, we created a C# program to pre-process the data by doing the following:
 -	Combine different Excel files / tabs for various sensors for a water distribution zone into one consolidated CSV file
 -	Calculate the total water flow into a zone by correctly considering the sensors measuring water flowing in / out of a zone
 -	Create a uniform frequency for the sensor data by aggregating / distributing values on fixed intervals.
 -	Splitting Datetime column into Year, Weekday (Monday, Tuesday, ..., Sunday), Quarter, Month, Hour, FiveMinute (each 24-hour split into 5-minute intervals), Holiday (flag for public holidays).
 
+>**Lessons learned**
+>
+> This process was not strictly sequential and we had to go back and iterate several times before a good model was achieved.
+
+
 ### Visualizing the data 
 
-To better understand the data, visualization is a great tool. We used Power BI Desktop during the process to explore the data using various kind of visualizations. Exploring the data in Power BI allowed us to quickly look for patterns and get a lot better insight into the data. This helps us to identify what data we need to include in the dataset and maybe also what additional cleaning that needs to be done before we start to experiment with data in machine learning.
+Visualization is always a fantastic way to understand data, so we chose [Power BI Desktop](https://powerbi.microsoft.com/en-us/desktop/) to explore the data using various kind of visualizations. 
+ This allowed us to quickly look for patterns and get a lot of insight into the data. 
+ We identified the fields that we needed to include in the dataset and also what kind of cleaning that needed to be done before we started to experiment with data in machine learning.
 
-![Visualize Data](./images/PowerBIVisualize1.jpg)
+ *Data Visualisation in PowerBI*
+![Data Visualisation in PowerBI](../images/powel/PowerBIVisualize1.jpg)
 
 ### Azure ML Studio Experiments 
 
-From the visualization done with Power BI we learned that the water flow into the water distribution system follows a daily pattern with some exceptions of weekends and possibly public holidays. To allow for a somewhat granular model for water flow within a 24-hour period, we decided to split every 24-hour into 5-minute intervals. We also included a flag to indicate whether a given sample time is associated with a public holiday or not.
+After having spent some time in Power BI we had learned that the water flow into the water distribution system follows 
+a daily pattern with some exceptions of weekends and possibly public holidays. 
+To allow for a somewhat granular model for water flow within a 24-hour period, we decided to split every 24-hour into 5-minute intervals. 
+We also included a flag to indicate whether a given sample time is associated with a public holiday or not.
 
 We created the following Azure ML Experiment to test various features and machine learning algorithms:
 
-![Visualize Data](./images/AzureMLExperiment.png)
+*Azure Machine Learning Experiment*
+![Azure Machine Learning Experiment](../images/powel/AzureMLExperiment.png)
 
-We found that testing with different set of features and machine learning algorithms in Azure ML is very easy. Again, it is very important to use a tool for visualizing the results from the machine learning. To be able to separate noise from real anomalies we experimented a lot with various ways to visualize the residuals between the predicted values and the actual values. We decided to go for a model, where we create a sliding windows of residuals. In the sliding window, we ignore all the values within one standard deviation of the predicted value. Then we calculate the percentage of the difference between the actual value and the predicted value and summed it up over the time window. When visualizing the residuals, we also filtered out the low values.
+### Eureka!
+Testing with different set of features and machine learning algorithms in Azure ML was very easy! 
 
-![Visualize Data](./images/PowerBIVisualize2.jpg)
+To be able to separate noise from real anomalies we experimented a lot with various ways to visualize the residuals between the predicted values and the actual values. 
+We decided to go for a model, where we create a sliding windows of residuals. 
+In the sliding window, we ignore all the values within one standard deviation of the predicted value. 
+Then we calculate the percentage of the difference between the actual value and the predicted value and summed it up over the time window. 
+When visualizing the residuals, we also filtered out the low values.
 
-With this visualization, we could quickly identify anomalies in the water flow values compared with the predicted values. Then we would investigate with the history of reports to see if the anomalies were correlated with the results we got from the machine learning experiments. We learned that one challenge when trying to correlate time series data from sensors with manual entered reports is that the manual reports does not have any precise start / end time for incidents / repairs and they are then quite loosely coupled with the time series data. Therefor we also decided to keep the manual report data out of the machine learning models we worked with. Despite these challenges we could manually correlate anomalies in water flow with actual incidents found in the report system. This strengthened our hypothesis that we would be able to build an application to monitor the current actual water flow and trigger alarms based on anomalies found related to a machine learning predicted curve.
+> *Key takeaway* <br/>
+> It is very important to use a tool such as PowerBI for visualizing the results of the machine learning!
 
-## Architecture
+Image: *Overlaying historical data on top of the Machine Learning prediction*
+![Overlaying historical data on top of the Machine Learning prediction](../images/powel/PowerBIVisualize2.jpg)
 
-![Solution Architecture](./images/Architecture.png)
+With this visualization, we could quickly identify anomalies in the water flow values compared with the predicted values. 
+We wanted to compare our findings against the history of maintenance reports to see if we could somehow correlate those with the detected anomalies, but this tought us something: 
 
+> **Lesson Learned**
+> 
+> Trying to correlate time series data from sensors with manually entered maintenance reports is a challenge since they're very loosely coupled with the sensor data.
+>
+> We therefore decided to keep the manual report data *out* of the machine learning models. 
 
-## Device used & Code artifacts 
+Even though we decided to skip the manually entered reports in the Machine Learning experiment, we still used them extensively to see and understand the data in Power BI. 
+It largely helped us in strengthening our hypothesis that we would be able to build an application to monitor the current actual water flow and trigger alarms based on 
+deviations from the predicted curve. 
 
-For the Hackfest we used sensor data exported from SCADA system in Excel format. To simulate the flow of real-time sensor data into the system, we created a simulator pushing the data to the Azure IoT Hub.
-
-## Looking forward
+## Going forward
 
 We have successfylly demonstrated that we are able to create an application, which can monitor and alert on anomalies in the water flow to help repair leakages as soon as possible.
+The next step for Powel is to finish up the last bits and pieces of the application and use this in discussion with customers in order to bring this solution to the market.
 
-The next step for the customer is to finish up the last pieces of the demo application and use this in discussion with customers in order to bring this solution to the market.
+An analyst has been introduced to the project to help work with the Machine Learning model further. Together with Microsoft, Powel is making significant investments in aquiring
+expertise on data science, ML integration, data analysis and domain expertise.
+
+Further down the line, we will be looking at automating water-pressure in various grids based on machine learning predictions. 
+This to provide just enough water pressure based on predictions. 
 
 ## Conclusion 
 
-We were able to create reasonably good machine learning models to predict future water flow values based on simple inputs like date and time. 
-We were also able to create good visualization of historical data to highlight the anomalies. 
-This made the job of correlating the anomalies found with the manual reports for issues and repairs for the water distribution system. 
+It is nothing short of amazing that during the course of *five days* were able to put together a secure IoT solution where every working part required little effort. 
+
+We were able to create a reasonably good machine learning model to predict future water flow values based on simple inputs like date, time and water flow. 
+We were also able to create a good visualization of historical data to highlight the anomalies in our ***Smart Water*** application. 
+Correlating anomalies with the manual inspection reports was done in the application. 
 We also created an end to end demo application for monitoring and alerting potential water leakages. 
 This provided us with enough confidence needed to take this to the next phase.
 
+### Lessons Learned
+- Setting up a secure, scalable IoT system using Azure is a breeze. Azure provides all the required components to host such as system, and in a *proof-of-concept* gone bad, it can just as easilly be taken down again, securing a low investment cost. 
+- The science behind Machine Learning still requires significant knowledge about the problem domain as well as some experience in Mathematical analysis, and Powel is doing the necessary investments to ensure they have this competency in place.
+- The architecture and structure in this solution can be applied to many of Powel's other projects
 
+
+## References
+
+<dl>
+    <dt>A separate developer team worked with Microsoft to implement DevOps in this solution.</dt>
+    <dd>see: <a href="https://microsoft.github.io/techcasestudies/devops/2016/11/19/Powel.html">Improving water monitoring through DevOps practices with Powel AS</a></dd>
+</dl>
