Re-wording in conclusion

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -233,9 +233,9 @@ Correlating anomalies with the manual inspection reports was done in the applica
 We also created an end to end demo application for monitoring and alerting potential water leakages. 
 This provided us with enough confidence needed to take this to the next phase.
 
-### Lessons Learned
-- Setting up a secure, scalable IoT system using Azure is a breeze. Azure provides all the required components to host such as system, and in a *proof-of-concept* gone bad, it can just as easilly be taken down again, securing a low investment cost. 
-- The science behind Machine Learning still requires significant knowledge about the problem domain as well as some experience in Mathematical analysis, and Powel is doing the necessary investments to ensure they have this competency in place.
+#### Lessons Learned
+- Setting up a secure, scalable IoT system using Azure is a breeze. Azure provides all the required components to host such as system, and in a *proof-of-concept* gone bad, it can just as easilly be taken down again, securing a low investment cost / easy exit.
+- The science behind Machine Learning still requires significant knowledge about the problem domain as well as some experience in statistical analysis. Powel is doing the necessary investments to ensure they have this competency in place.
 - The architecture and structure in this solution can be applied to many of Powel's other projects
 
 
