Add section about Value Stream Map
Also including two extra images

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -76,6 +76,31 @@ The challenges in the project were:
 - Configure Azure ML to do anomaly detection on the data
 - Connect the anomaly detection results to the ***Smart Water*** application
 
+## Preparing for the hackfest
+A few weeks before the hackfest, we had a full-day [Value Stream Map](https://en.wikipedia.org/wiki/Value_stream_mapping) (VSM) session where we wanted to detail the activities for the hackfest as well as come up with a set
+of features for the ***Smart Water*** solution. Most of the architecture in the solution was solidified during this session, and the scoping of what we could achieve within a week was set.
+
+We discussed potential ways to solve the problem, and we concluded that in order to proceed, we needed to spend some time aquiring sensor data and chisel out a
+design proposal for what the application should do. One important decision that was made was to spend the time between the VSM hackfest gathering as much data as possible and to use
+PowerBI to look at ways to correlate them. Initially, we wanted to see if traffic conditions, weather, and other external data sources could help us determine water leakages. 
+
+There is also the problem of *locating* water leakages, where today's solution is to use special microphones attached to water pipes in a grid, and then triangulate an approximate location 
+of the leakage source, but these systems are not fixed, so we decided to leave this out of the scope of the hackfest.
+
+In the time between the VSM and the hackfest, we decided to
+- Collect as much data as possible, historical sensor telemetry, and possibly correlated external data
+- Work with visualising and data correlation to see if the data was good enough to use in Machine Learning
+- Come up with some good design sketches for the ***Smart Water*** application
+
+During this time, we collaborated using [Slack](https://slack.com/), due to it's availability and effortless cross-domain collaboration ability. Questions, comments and feedback were discussed
+daily, and made the hackfest the success it got at the end. 
+
+> We would not have been able to do all of the preparation of the data during the hackfest alone
+> 
+
+*Discussing water grids, elevations, and valves*
+
+![Discussing water grids, elevations, and valves](../images/powel/water-discussion.jpg)
  
 ## Solution 
 
@@ -123,7 +148,7 @@ we wrote a simulator application that replaced the timestamp of that dataset wit
 #### Device Simulator
 The simulator was written in an [Azure Function](https://azure.microsoft.com/en-us/services/functions/), which limited the transmit frequency to 1 minute. 
 The Scada sensors are able to transmit telemetry in 15 second intervals, but will require gateway software to connect to IoT Hub. We do not see any 
-major problems in creating such a gateway. 
+major problems in creating such a gateway, and the one minute interval was enough to go ahead
 
 #### Security
 The IoT Hub allows only registered devices to communicate with it and each registered device gets its own, "personal" connection string. 
@@ -212,16 +237,6 @@ Even though we decided to skip the manually entered reports in the Machine Learn
 It largely helped us in strengthening our hypothesis that we would be able to build an application to monitor the current actual water flow and trigger alarms based on 
 deviations from the predicted curve. 
 
-## Going forward
-
-We have successfylly demonstrated that we are able to create an application, which can monitor and alert on anomalies in the water flow to help repair leakages as soon as possible.
-The next step for Powel is to finish up the last bits and pieces of the application and use this in discussion with customers in order to bring this solution to the market.
-
-An analyst has been introduced to the project to help work with the Machine Learning model further. Together with Microsoft, Powel is making significant investments in aquiring
-expertise on data science, ML integration, data analysis and domain expertise.
-
-Further down the line, we will be looking at automating water-pressure in various grids based on machine learning predictions. 
-This to provide just enough water pressure based on predictions. 
 
 ## Conclusion 
 
@@ -238,10 +253,20 @@ This provided us with enough confidence needed to take this to the next phase.
 - The science behind Machine Learning still requires significant knowledge about the problem domain as well as some experience in statistical analysis. Powel is doing the necessary investments to ensure they have this competency in place.
 - The architecture and structure in this solution can be applied to many of Powel's other projects
 
+#### Going forward
+The next step for Powel is to finish up the last bits and pieces of the application and use this in discussion with customers in order to bring this solution to the market.
 
+An analyst has been introduced to the project to help work with the Machine Learning model further. Together with Microsoft, Powel is making significant investments in aquiring
+expertise on data science, ML integration, data analysis and domain expertise.
+
+Further down the line, we will be looking at automating water-pressure in various grids based on machine learning predictions. 
+This to provide just enough water pressure based on predictions. 
+
+![Leaking water](../images/powel/leaking.jpg)
 ## References
 
 <dl>
-    <dt>A separate developer team worked with Microsoft to implement DevOps in this solution.</dt>
-    <dd>see: <a href="https://microsoft.github.io/techcasestudies/devops/2016/11/19/Powel.html">Improving water monitoring through DevOps practices with Powel AS</a></dd>
+    <dt>A separate, DevOps focused team worked together with Microsoft to implement the <b><i>Smart Water</i></b> application</dt>
+    <dd>See '<a href="https://microsoft.github.io/techcasestudies/devops/2016/11/19/Powel.html">Improving water monitoring through DevOps practices with Powel AS</a>' for 
+    more details about the solution architecture</dd>
 </dl>
