Rewrite hackfest preparation section
Remove VSM as a concept, explain the dataweek and use of Slack

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -77,26 +77,28 @@ The challenges in the project were:
 - Connect the anomaly detection results to the ***Smart Water*** application
 
 ## Preparing for the hackfest
-A few weeks before the hackfest, we had a full-day [Value Stream Map](https://en.wikipedia.org/wiki/Value_stream_mapping) (VSM) session where we wanted to detail the activities for the hackfest as well as come up with a set
-of features for the ***Smart Water*** solution. Most of the architecture in the solution was solidified during this session, and the scoping of what we could achieve within a week was set.
+A few weeks before the hackfest, we had a full-day discussion where we detailed the activities for the hackfest. Much of the day was spend planning the features for the ***Smart Water*** solution. 
+The technologies and architecture in the solution was solidified during this session, and the scoping of what we could achieve within a week was set.
 
-We discussed potential ways to solve the problem, and we concluded that in order to proceed, we needed to spend some time aquiring sensor data and chisel out a
-design proposal for what the application should do. One important decision that was made was to spend the time between the VSM hackfest gathering as much data as possible and to use
-PowerBI to look at ways to correlate them. Initially, we wanted to see if traffic conditions, weather, and other external data sources could help us determine water leakages. 
+There is also the problem of *locating* water leakages, where in today's solution,special microphones are attached to water pipes, and then used to triangulate an approximate location 
+of the leakage source based on their sound wave patterns. These systems are mobile, and only used where leaks are suspected, so we decided to leave this out of the scope of this hackfest.
 
-There is also the problem of *locating* water leakages, where today's solution is to use special microphones attached to water pipes in a grid, and then triangulate an approximate location 
-of the leakage source, but these systems are not fixed, so we decided to leave this out of the scope of the hackfest.
+We also discussed wether regulating water pressure based on predictions would be possible, but decided to leave that as a future exercise.
 
-In the time between the VSM and the hackfest, we decided to
-- Collect as much data as possible, historical sensor telemetry, and possibly correlated external data
-- Work with visualising and data correlation to see if the data was good enough to use in Machine Learning
-- Come up with some good design sketches for the ***Smart Water*** application
+#### The dataweek
+One important decision that was made was to spend a full week, dubbed "The dataweek" between the VSM and the hackfest to gather as much data as possible and to look at different ways to correlate them. 
+We wanted to see if traffic conditions, weather, or other external data sources could help us determine water leakages, and to find relevant "third party" sources of interesting data.
 
-During this time, we collaborated using [Slack](https://slack.com/), due to it's availability and effortless cross-domain collaboration ability. Questions, comments and feedback were discussed
-daily, and made the hackfest the success it got at the end. 
+We also had the design team start working on sketching the user experience in the Smart Water application to have as much as possible in place for the hackfest itself
 
-> We would not have been able to do all of the preparation of the data during the hackfest alone
-> 
+
+
+During this time, we collaborated using [Slack](https://slack.com/), due to it's informality and effortless cross-domain collaboration. 
+Questions, comments and feedback were discussed daily, and made the hackfest the success it was. 
+
+> ***Key learning*** <br />
+> Had we not decided to spend time in the dataweek, we would not have been able to do deliver a complete end-to-end solution like we did in this hackfest. 
+> Investigating correlations between diffent data was central in the work we did during the hackfest, which mainly revolved around creating a working machine learning model.
 
 *Discussing water grids, elevations, and valves*
 
