Fix spelling errors, pass 1

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -15,9 +15,9 @@ verticals: Water, Smart Cities, Environmental
 
 # Using IoT to detect water leakages with Powel 
 ## Introduction
-Municipalities in Norway currently have an average of over 30% water leakage in their water distribution network. This represents a significant cost that ultimately ends up in the hands of the consumers. 
+Municipalities in Norway currently have an average of over 30% water leakage in their water distribution network. This represents a significant cost that ends up in the hands of the consumers. 
 During a week long hackfest together with Microsoft, Powel implemented an IoT solution, ***Smart Water***, that will enhance the maintenance staff with the ability to discover and react to these leakages early. 
-This has the potential for huge savings for the municipalities and ultimately the consumers in them.
+This has the potential for huge savings for the municipalities and their inhabitants.
 
 This document describes the technlogoy choices made, and the learnings made from the hackfest.
 
@@ -71,13 +71,13 @@ to deliver a working *Minimal Viable Product* (MVP).
 
 The challenges in the project were: 
 
-- Finding a secure, scaleable way to deliver and store telemetry data
+- Finding a secure, scalable way to deliver and store telemetry data
 - Understanding how to work and prepare the telemetry data for machine learning (ML)
 - Configure Azure ML to do anomaly detection on the data
 - Connect the anomaly detection results to the ***Smart Water*** application
 
 ## Preparing for the hackfest
-A few weeks before the hackfest, we had a full-day discussion where we detailed the activities for the hackfest. Much of the day was spend planning the features for the ***Smart Water*** solution. 
+A few weeks before the hackfest, we had a full-day discussion where we detailed the activities for the hackfest. Much of the day was spent planning the features for the ***Smart Water*** solution. 
 The technologies and architecture in the solution was solidified during this session, and the scoping of what we could achieve within a week was set.
 
 There is also the problem of *locating* water leakages, where in today's solution,special microphones are attached to water pipes, and then used to triangulate an approximate location 
